--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/Edit.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/Edit.cshtml
@@ -4,17 +4,31 @@
 @model AddressEditViewModel
 
 @using (Html.BeginFormAntiForgeryPost()) {
-    <div class="edit-address">
-        <div class="edit-address edit-address">
-            @Html.Partial("AddressEditor")
-        </div>
-        <div class="action save-button">
-            <button class="primaryAction" type="submit" name="submit.Save" value="submit.Save">@T("Save")</button>
-            @{
-                var returnUrl = Url.Action("MyAddresses", "Addresses");
+<div class="edit-address">
+    @if (Model.Errors.Any()) {
+        <div class="errors">
+            @foreach (var err in Model.Errors) {
+                <p>@err</p>
             }
-
-            <a id="button-cancel" href="@returnUrl" class="button">@T("Cancel")</a>
         </div>
+    }
+    @if (Model.Information.Any()) {
+        <div class="information">
+            @foreach (var info in Model.Information) {
+                <p>@info</p>
+            }
+        </div>
+    }
+    <div class="edit-address edit-address">
+        @Html.Partial("AddressEditor")
     </div>
+    <div class="action save-button">
+        <button class="primaryAction" type="submit" name="submit.Save" value="submit.Save">@T("Save")</button>
+        @{
+            var returnUrl = Url.Action("MyAddresses", "Addresses");
+        }
+
+        <a id="button-cancel" href="@returnUrl" class="button">@T("Cancel")</a>
+    </div>
+</div>
 }
