add feature openrouteservice

--- a/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/OsmMap.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/OsmMap.cshtml
@@ -32,6 +32,7 @@
 @using (Script.Head()) {
     Script.Require("OpenLayersAPI");
     Script.Require("OpenStreetMapAPI");
+    Script.Require("OpenRouteAPI");
     Script.Require("LaserOrchardMaps");
 }
 @using (Script.Foot()) {
