--- a/src/Modules/Laser.Orchard.StartupConfig/Views/FrontEndClientStorage/Index.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/FrontEndClientStorage/Index.cshtml
@@ -162,7 +162,7 @@
                         window.parent.$("a.button.close")[0].click();
                         </text>
                         }
-                        window.parent.postMessage("uploaded");
+             			 window.parent.postMessage("uploaded",'*');
                     });
                 },
                 fail: function (e, data) {
