Fix valore null in LocalizationPartDriver quando non si usano i WidgetContainer

--- a/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts/ContribWidget.Localization.Edit.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts/ContribWidget.Localization.Edit.cshtml
@@ -3,9 +3,11 @@
 }
 
 @using (Script.Foot()) {
+    if (!String.IsNullOrWhiteSpace(Model)) {
     <script type="text/javascript">
         $(document).ready(function () {
             $("#Localization_SelectedCulture").val("@Model");
         });
     </script>
+    }
 }
