-aggiunta prima versione bottone "nuovo contenuto"

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/ContentPickerCreateItem.Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/ContentPickerCreateItem.Edit.cshtml
@@ -1,1 +1,15 @@
-﻿<button>Create New Item</button>
+﻿@*js che apre fa linestra*@
+
+
+<div>
+    <div>
+        <button id="rerun">Create New Item</button>
+        <button id="select">Select a Content Type</button>
+    </div>
+    <ul id="ulCT">
+        @foreach (var ctName in Model.contentTypeList) {
+            <li>@ctName</li>
+        }
+
+    </ul>
+</div>
